# mantelgroup_assessment

./: README.md  Vinoth_Karunakaran.pptx  pyproject.toml  requirements.txt
examples/: run_som.py  som_hyperopt.py  som_hyperparameter_mlflow.py
kohonen/: kohonen.ipynb
src/sklearn_wrapper/: som_wrapper.py
src/som/: config.py  model.py
